Add AuthorService implementation; save work before refactoring query building process
